Fix parameter namings + some more